Parser + tests added